# haskell-dbus

./: .codeclimate.yml  .gitignore  .travis.yml  DBus.nw  Makefile  README.md  Setup.hs  Tests.hs  Tests.nw  benchmark.hs  dbus-core.cabal  dbus-core.nw  dbus-core.tex  dbus.cabal  manual.tex  readme.txt  stack.yaml
.github/workflows/: cabal.yaml  ghc.yaml  stack_latest.yaml  stackage.yaml  stackage.yaml.inactive  stackage_nightly.yaml
DBus/: Address.lhs  Address.nw  Authentication.lhs  Bus.lhs  Bus.nw  Connection.lhs  Connection.nw  Constants.lhs  Constants.nw  Introspection.lhs  Introspection.nw  Marshal.lhs  Message.lhs  Message.nw  Padding.lhs  Types.lhs  Types.nw  Unmarshal.lhs  Util.lhs  Util.nw  Wire.nw
DBus/Bus/: Address.lhs  Connection.lhs
DBus/Internal/: Authentication.lhs  Marshal.lhs  Padding.lhs  Unmarshal.lhs  Util.lhs
DBus/Protocol/: Authentication.lhs  Marshal.lhs  Padding.lhs  Unmarshal.lhs
DBus/Types/: Atom.lhs  Containers.lhs  Containers.lhs-boot  Endianness.lhs  Names.lhs  ObjectPath.lhs  Serial.lhs  Signature.lhs  Util.lhs
DBus/Types/Containers/: Array.lhs  Dictionary.lhs  Structure.lhs  Variant.lhs
Examples/: dbus-monitor.hs  simple.hs
Tests/: Address.hs  Containers.hs  Instances.hs  Marshal.hs  Messages.hs  MiscTypes.hs  Names.hs  Signature.hs
benchmarks/: Benchmarks.hs  DBusBenchmarks.hs  dbus-core-benchmarks.cabal  haskell-dbus-benchmarks.cabal
examples/: dbus-monitor.hs  export.hs  introspect.hs  list-names.hs  property.hs  receivefd.hs  sendfd.hs  simple.hs
idlxml/: dbus.xml
latex/: noweb.sty
lib/: DBus.hs
lib/DBus/: Address.hs  Client.hs  Connection.hs  Constants.hs  Generate.hs  Generation.hs  Introspection.hs  Message.hs  Socket.hs  TH.hs  Transport.hs  Types.hs  Util.hs  Wire.hs
lib/DBus/Client/: Error.hs  Internal.hs  Simple.hs
lib/DBus/Connection/: Authentication.hs  Error.hs  Transport.hs
lib/DBus/Internal/: Address.hs  Message.hs  Types.hs  Wire.hs
lib/DBus/Introspection/: Parse.hs  Render.hs  Types.hs
lib/DBus/Message/: Internal.hs
lib/DBus/Types/: Internal.hs
lib/DBus/Util/: MonadError.hs
lib/DBus/Wire/: Internal.hs
scripts/: common.bash  dist  haddock  latex  run-benchmarks  run-coverage  run-profile  run-tests
src/: addresses.anansi  api-docs.anansi  authentication.anansi  bus.anansi  client.anansi  connections.anansi  constants.anansi  copyright.anansi  dbus-core.anansi  introduction.anansi  introspection.anansi  match-rules.anansi  messages.anansi  module-headers.anansi  name-reservation.anansi  summary.anansi  type-instances.anansi  types.anansi  util.anansi  utilities.anansi  wire.anansi
tests/: Benchmarks.hs  DBusTests.hs  Main.hs  Properties.hs  Tests.hs  dbus-core-tests.cabal  haskell-dbus-tests.cabal
tests/DBus/: Tests.hs
tests/DBus/Tests/: Util.hs
tests/DBusTests/: Address.hs  BusName.hs  Client.hs  ErrorName.hs  Generation.hs  Integration.hs  InterfaceName.hs  Introspection.hs  MemberName.hs  Message.hs  ObjectPath.hs  Serialization.hs  Signature.hs  Socket.hs  TH.hs  Transport.hs  Util.hs  Variant.hs  Wire.hs
tests/data/: dbus-daemon.xml
