name: dbus-core
version: 0.8.5.3
synopsis: Low-level D-Bus protocol implementation
license: GPL-3
license-file: License.txt
author: John Millikin
maintainer: jmillikin@gmail.com
build-type: Simple
cabal-version: >=1.6
category: Network, Desktop
stability: experimental
bug-reports: mailto:jmillikin@gmail.com
homepage: http://john-millikin.com/software/haskell-dbus/
tested-with: GHC==6.12.1

extra-source-files:
  readme.txt
  --
  examples/dbus-monitor.hs
  examples/simple.hs
  --
  src/addresses.anansi
  src/api-docs.anansi
  src/authentication.anansi
  src/bus.anansi
  src/connections.anansi
  src/constants.anansi
  src/dbus-core.anansi
  src/introduction.anansi
  src/introspection.anansi
  src/match-rules.anansi
  src/messages.anansi
  src/name-reservation.anansi
  src/types.anansi
  src/util.anansi
  src/wire.anansi
  --
  scripts/common.bash
  scripts/dist
  scripts/haddock
  scripts/latex
  scripts/run-benchmarks
  scripts/run-tests
  --
  tests/Properties.hs
  tests/dbus-core-tests.cabal

source-repository head
  type: bazaar
  location: http://john-millikin.com/software/haskell-dbus/

library
  ghc-options: -Wall

  hs-source-dirs: hs

  build-depends:
      base >= 4.0 && < 5.0
    , parsec >= 2.0 && < 3.2
    , binary >= 0.4 && < 0.6
    , bytestring >= 0.9 && < 0.10
    , data-binary-ieee754 >= 0.3 && < 0.5
    , text >= 0.8 && < 0.10
    , containers >= 0.1 && < 0.5
    , unix >= 2.2 && < 2.5
    , network >= 2.2 && < 2.4
    , libxml-sax >= 0.6 && < 0.7
    , xml-types >= 0.1 && < 0.2

  exposed-modules:
    DBus.Address
    DBus.Authentication
    DBus.Bus
    DBus.Connection
    DBus.Constants
    DBus.Introspection
    DBus.MatchRule
    DBus.Message
    DBus.NameReservation
    DBus.Types
    DBus.UUID
    DBus.Wire
    DBus.Wire.Marshal
    DBus.Wire.Unmarshal
    DBus.Message.Internal
    DBus.Wire.Internal

  other-modules:
    DBus.Types.Internal
    DBus.Wire.Unicode
    DBus.Util
    DBus.Util.MonadError
