name: dbus-core
version: 0.9.2.1
synopsis: Low-level D-Bus protocol implementation
license: GPL-3
license-file: license.txt
author: John Millikin <jmillikin@gmail.com>
maintainer: John Millikin <jmillikin@gmail.com>
copyright: John Millikin 2010-2011
build-type: Simple
cabal-version: >= 1.6
category: Network, Desktop
stability: experimental
homepage: https://john-millikin.com/software/dbus-core/
bug-reports: mailto:jmillikin@gmail.com

extra-source-files:
  readme.txt
  --
  examples/dbus-monitor.hs
  examples/export.hs
  examples/introspect.hs
  examples/simple.hs
  --
  latex/figure_1.svg
  latex/geometry.sty
  latex/noweb.sty
  --
  scripts/common.bash
  scripts/dist
  scripts/haddock
  scripts/latex
  scripts/run-benchmarks
  scripts/run-coverage
  scripts/run-tests
  --
  src/api-docs.anansi
  src/client.anansi
  src/connections.anansi
  src/constants.anansi
  src/dbus-core.anansi
  src/introduction.anansi
  src/introspection.anansi
  src/messages.anansi
  src/module-headers.anansi
  src/summary.anansi
  src/types.anansi
  src/utilities.anansi
  src/wire.anansi
  --
  benchmarks/Benchmarks.hs
  benchmarks/dbus-core-benchmarks.cabal
  --
  tests/dbus-core-tests.cabal
  tests/DBus/Tests.hs
  tests/DBus/Tests/Util.hs
  tests/Main.hs

source-repository head
  type: bazaar
  location: https://john-millikin.com/software/dbus-core/

source-repository this
  type: bazaar
  location: https://john-millikin.com/branches/dbus-core/0.9/
  tag: dbus-core_0.9.2.1

library
  ghc-options: -Wall -O2
  hs-source-dirs: hs

  -- IMPORTANT: if you change these dependencies, also update them in
  -- tests/
  build-depends:
      base >= 4.0 && < 5.0
    , binary >= 0.4 && < 0.6
    , bytestring >= 0.9 && < 0.10
    , containers >= 0.1 && < 0.5
    , data-binary-ieee754 >= 0.3 && < 0.5
    , libxml-sax >= 0.7 && < 0.8
    , network >= 2.2 && < 2.4
    , parsec >= 2.0 && < 3.2
    , text >= 0.11.1.5 && < 0.12
    , unix >= 2.2 && < 2.6
    , vector >= 0.7 && < 0.10
    , xml-types >= 0.3 && < 0.4

  exposed-modules:
    DBus.Address
    DBus.Client
    DBus.Client.Simple
    DBus.Connection
    DBus.Constants
    DBus.Introspection
    DBus.Message
    DBus.Types
    DBus.Wire

  other-modules:
    DBus.Client.Internal
    DBus.Connection.Error
    DBus.Connection.Authentication
    DBus.Connection.Transport
    DBus.Message.Internal
    DBus.Types.Internal
    DBus.Util
    DBus.Util.MonadError
    DBus.Wire.Internal
