name: dbus-core-tests
version: 0
build-type: Simple
cabal-version: >= 1.6

executable dbus-core_tests
  main-is: Properties.hs
  ghc-options: -Wall -O2
  hs-source-dirs: ../hs,.

  build-depends:
      base > 3 && < 5
    , binary
    , bytestring
    , containers
    , data-binary-ieee754
    , libxml-sax
    , parsec
    , text
    , vector
    , xml-types
    , QuickCheck == 2.4.*
    , HUnit == 1.2.*
    , test-framework >= 0.2 && < 0.4
    , test-framework-quickcheck2 == 0.2.9
    , test-framework-hunit == 0.2.6

executable dbus-core_benchmarks
  main-is: Benchmarks.hs
  ghc-options: -Wall -O2 -fno-warn-orphans
  hs-source-dirs: ../hs,.

  build-depends:
      base > 3 && < 5
    , binary
    , bytestring
    , containers
    , criterion
    , data-binary-ieee754
    , deepseq
    , parsec
    , text
    , vector
