name: dbus-core-tests
version: 0
build-type: Simple
cabal-version: >= 1.6

flag coverage
  default: False
  manual: True

executable dbus-core_tests
  main-is: Main.hs
  ghc-options: -Wall -fno-warn-orphans
  hs-source-dirs: ../hs,.

  if flag(coverage)
    ghc-options: -fhpc

  build-depends:
      base > 4.0 && < 5.0
    , binary >= 0.4 && < 0.6
    , bytestring >= 0.9 && < 0.10
    , chell >= 0.1.1 && < 0.2
    , chell-quickcheck >= 0.1 && < 0.2
    , containers >= 0.1 && < 0.5
    , data-binary-ieee754 >= 0.3 && < 0.5
    , libxml-sax >= 0.7 && < 0.8
    , network >= 2.2 && < 2.4
    , parsec >= 2.0 && < 3.2
    , QuickCheck == 2.4.*
    , text >= 0.11.1.5 && < 0.12
    , transformers >= 0.2 && < 0.3
    , unix >= 2.2 && < 2.6
    , vector >= 0.7 && < 0.10
    , xml-types >= 0.3 && < 0.4
