name: haskell-dbus-tests
version: 0
build-type: Simple
cabal-version: >= 1.6

data-files:
  data/dbus-daemon.xml

flag coverage
  default: False
  manual: True

executable haskell-dbus-tests
  main-is: DBusTests.hs
  ghc-options: -Wall -fno-warn-orphans
  hs-source-dirs: ../lib,.

  if flag(coverage)
    ghc-options: -fhpc

  build-depends:
      base > 4.0 && < 5.0
    , binary >= 0.4 && < 0.6
    , bytestring >= 0.9 && < 0.10
    , chell >= 0.2.3 && < 0.3
    , chell-quickcheck >= 0.1 && < 0.2
    , containers >= 0.1 && < 0.5
    , data-binary-ieee754 >= 0.3 && < 0.5
    , directory
    , filepath
    , libxml-sax >= 0.7 && < 0.8
    , network >= 2.2 && < 2.4
    , parsec >= 2.0 && < 3.2
    , process >= 1.0 && < 1.2
    , QuickCheck == 2.4.*
    , random >= 1.0 && < 1.1
    , text >= 0.11.1.5 && < 0.12
    , transformers >= 0.2 && < 0.3
    , unix >= 2.2 && < 2.6
    , uuid >= 1.1 && < 1.3
    , vector >= 0.7 && < 0.10
    , xml-types >= 0.3 && < 0.4
