name: haskell-dbus-tests
version: 0
build-type: Simple
cabal-version: >= 1.6

data-files:
  data/dbus-daemon.xml

flag coverage
  default: False
  manual: True

flag network-bytestring-610
  default: False

flag network-bytestring
  default: True

executable haskell-dbus-tests
  main-is: DBusTests.hs
  ghc-options: -Wall -fno-warn-orphans
  hs-source-dirs: ../lib,.

  if flag(coverage)
    ghc-options: -fhpc

  build-depends:
      base > 4.0 && < 5.0
    , bytestring >= 0.9
    , cereal >= 0.3.4 && < 0.4
    , chell >= 0.3 && < 0.4
    , chell-quickcheck >= 0.2 && < 0.3
    , containers >= 0.1 && < 0.6
    , directory
    , filepath
    , libxml-sax >= 0.7 && < 0.8
    , parsec >= 2.0 && < 3.2
    , process >= 1.0 && < 1.2
    , QuickCheck == 2.4.*
    , random >= 1.0 && < 1.1
    , text >= 0.11.1.5 && < 0.12
    , transformers >= 0.2 && < 0.4
    , unix >= 2.2 && < 2.7
    , vector >= 0.7 && < 0.11
    , xml-types >= 0.3 && < 0.4

  -- see comments in dbus.cabal
  if impl(ghc < 6.12)
    if flag(network-bytestring-610) && false
      build-depends:
          network >= 2.2.3 && < 2.4
    else
      build-depends:
          network >= 2.2 && < 2.2.3
        , network-bytestring >= 0.1.2 && < 0.2
  else
    if flag(network-bytestring)
      build-depends:
          network >= 2.2.3 && < 2.4
    else
      build-depends:
          network >= 2.2 && < 2.2.3
        , network-bytestring >= 0.1.2 && < 0.2
